# Blog-Writing-Agent-LangGraph-LangChain-FastAPI-React-Postgres-Azure

./: .gitignore  README.md
.github/workflows/: azure-static-web-apps-lively-dune-0285e0f00.yml  backend-acr.yaml  backend-acr.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: blogs.py
backend/app/core/: config.py
backend/app/db/: dependencies.py  init_db.py  models.py  repositories.py  session.py  test_db.py
backend/app/graph/: blog_graph.py  blog_graph_old.py  prompts.py  schemas.py  subgraph.py  utils.py
backend/app/schemas/: blog.py
backend/app/services/: blob_storage_service.py  blog_service.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Tabs.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/features/blogs/: BlogOutput.tsx  GenerateBlogFormStream.tsx  ProcessingView.tsx  blogApi.ts
frontend/src/types/: blog.ts
